--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -16,6 +16,8 @@
   </nav>
   <section id="makeCourse">
   </section>
+  <section id="upgradeCourse">
+  </section>
   <section id="deleteCourse">
   </section>
   <section id="courses">
