--- a/hosted/style.css
+++ b/hosted/style.css
@@ -17,7 +17,7 @@ html, body {
 nav {
     width: 100%;
     height: 50px;
-    background-color: #55acee;
+    background-color: #758BFD;
 }
 
 nav:nth-child(1) {
@@ -118,9 +118,9 @@ nav:nth-child(1) {
     margin-top: 14px;
     font-size: 1.2em;
     width: 100px;
-    background-color: #55acee;
+    background-color: #758BFD;
     border-radius: 2px;
-    border-color: #66acee;
+    border-color: #AEB8FE;
     padding: 3px 0px;
     color: white;
     text-decoration: none;
