--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,3 +1,11 @@
+/* hex
+758BFD
+50514F
+CBD4C2
+FFFCFF
+C3B299
+*/
+
 html, body {
     height: 100%;
     width: 100%;
@@ -28,43 +36,43 @@ nav:nth-child(1) {
     padding: 5px;
     padding-top: 12px;
     padding-left: 20px;
-    color: white;
+    color: #FFFCFF;
     font-size: 1.3em;
     float: left;
 }
 
 .navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
-    color: white;
+    color: #FFFCFF;
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
-    background-color: #55acee;
+    background-color: #758BFD;
     transition: background-color 0.4s ease;
 }
 
 .navlink a:hover {
     transition: background-color 0.8s ease;
-    background-color: #66bdff;
+    background-color: #758BFD;
 }
 
 .courseForm {
-    border: 2px solid #338acc;
-    height: 35px;
-    width: 700px;
+    border: 2px solid #50514F;
+    height: 100px;
+    width: 675px;
     margin-top:0px;
     padding-top:10px;
-    background-color: #55acee;
+    background-color: #758BFD;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
 }
 
 .courseForm label {
     display: inline-block;
-    width: 75px;
+    width: 100px;
     margin-left: 10px;
     font-size: 1.2em;
     float: left;
-    color: white;
+    color: #FFFCFF;
 }
 
 .courseForm input[type=text] {
@@ -75,19 +83,21 @@ nav:nth-child(1) {
     transition: background-color 0.4s ease;
     display: inline;
     width: 90px;
-    background-color: #55acee;
+    background-color: #758BFD;
     border-radius: 2px;
-    color: white;
+    color: #FFFCFF;
     text-decoration: none;
+    float: right;
+    margin-right: 2px;
 }
 
 .makeCourseSubmit:link, .makeCourseSubmit:visited, .makeCourseSubmit:hover, .makeCourseSubmit:active {
-    color: white;
+    color: #FFFCFF;
 }
 
 .makeCourseSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: #338acc;
+    background-color: #50514F;
 }
 
 .mainForm {
@@ -122,17 +132,17 @@ nav:nth-child(1) {
     border-radius: 2px;
     border-color: #AEB8FE;
     padding: 3px 0px;
-    color: white;
+    color: #FFFCFF;
     text-decoration: none;
 }
 
 .formSubmit:link, .formSubmit:visited, .formSubmit:hover, .formSubmit:active {
-    color: white;
+    color: #FFFCFF;
 }
 
 .formSubmit:hover {
     transition: background-color 0.4s ease;
-    background-color: #338acc;
+    background-color: #50514F;
 }
 
 #user, #pass, #pass2 {
@@ -144,7 +154,7 @@ nav:nth-child(1) {
 
 #user:focus, #pass:focus, #pass2:focus {
     outline: none;
-    box-shadow: 0px 0px 1px 1px #55acee;
+    box-shadow: 0px 0px 1px 1px #758BFD;
 }
 
 #courseMessage {
@@ -192,20 +202,20 @@ nav:nth-child(1) {
 #courses {
     width: 40%;
     min-width: 400px;
-    border: 2px solid #55acee;
-    border-radius: 4px;
+    /* border: 2px solid #758BFD;
+    border-radius: 4px; */
     margin: 0 auto;
     margin-top: 100px;
 }
 
 .course {
-    width: 95%;
+    width: 50%;
     margin: 0 auto;
     margin-top: 2px;
     margin-bottom: 2px;
-    border: 2px solid #55acee;
-    border-radius: 4px;
-    background-color: #55acee;
+    border: 2px solid #758BFD;
+    border-radius: 2px;
+    background-color: #758BFD;
     padding: 10px;
     min-height:60px;
     overflow: hidden;
@@ -215,10 +225,10 @@ nav:nth-child(1) {
     transition: border-color 0.2s ease-out;
     border-color: rgba(255,255,255, 0.8);
     transition: background-color 2.6s ease-out;
-    background-color: #66bfff;
+    background-color: #021da1;
 }
 
-img.courseFace {
+/* img.courseFace {
     margin-left: 25px;
     margin-right: 10px;
     height: 50px;
@@ -226,7 +236,7 @@ img.courseFace {
     border-radius: 4px;
     margin-top:10px;
     float:left;
-}
+} */
 
 h3.emptyCourse {
     width: 400px;
