--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -12,12 +12,14 @@
 </head>
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
-    <div course="navlink"><a href="/logout">Log out</a></div>
+    <div class="navlink"><a href="/logout">Log out</a></div>
+    <h1 id="title">Course Scheduling</h1>
+    <div id="userProfile"></div>
   </nav>
   <section id="makeCourse">
   </section>
-  <section id="upgradeCourse">
-  </section>
+  {{!-- <section id="upgradeCourse">
+  </section> --}}
   <section id="deleteCourse">
   </section>
   <section id="courses">
