--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,8 +12,10 @@
 </head>
 <body> 
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
-    <div course="navlink"><a id="loginButton" href="/login">Login</a></div>
-    <div course="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
+    <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
+    <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
+    <div class="navlink"><a id="resetButton" href="/reset">Change Password</a></div>
+    <h1 id="title">Course Scheduling</h1>
   </nav>
   <section id="content"></section>
   <div id="courseMessage"> <img id="speech" src="/assets/img/speech.png" alt="speech box"/>
