--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,9 +1,12 @@
-/* hex
+/*
+Color Scheme:
+
+27187E
 758BFD
-50514F
-CBD4C2
-FFFCFF
-C3B299
+AEB8FE
+F1F2F6
+FF8600
+
 */
 
 html, body {
@@ -12,6 +15,19 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+}
+
+#userProfile{
+    text-align: right;
+    color: black;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+#title{
+    text-align: center;
+    color: black;
+    font-size: 30px;
 }
 
 #logo {
@@ -36,13 +52,13 @@ nav:nth-child(1) {
     padding: 5px;
     padding-top: 12px;
     padding-left: 20px;
-    color: #FFFCFF;
+    color: #F1F2F6;
     font-size: 1.3em;
     float: left;
 }
 
 .navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
-    color: #FFFCFF;
+    color: #F1F2F6;
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
@@ -72,7 +88,7 @@ nav:nth-child(1) {
     margin-left: 10px;
     font-size: 1.2em;
     float: left;
-    color: #FFFCFF;
+    color: #F1F2F6;
 }
 
 .courseForm input[type=text] {
@@ -85,14 +101,14 @@ nav:nth-child(1) {
     width: 90px;
     background-color: #758BFD;
     border-radius: 2px;
-    color: #FFFCFF;
+    color: #F1F2F6;
     text-decoration: none;
     float: right;
     margin-right: 2px;
 }
 
 .makeCourseSubmit:link, .makeCourseSubmit:visited, .makeCourseSubmit:hover, .makeCourseSubmit:active {
-    color: #FFFCFF;
+    color: #F1F2F6;
 }
 
 .makeCourseSubmit:hover {
@@ -132,12 +148,12 @@ nav:nth-child(1) {
     border-radius: 2px;
     border-color: #AEB8FE;
     padding: 3px 0px;
-    color: #FFFCFF;
+    color: #F1F2F6;
     text-decoration: none;
 }
 
 .formSubmit:link, .formSubmit:visited, .formSubmit:hover, .formSubmit:active {
-    color: #FFFCFF;
+    color: #F1F2F6;
 }
 
 .formSubmit:hover {
@@ -202,10 +218,9 @@ nav:nth-child(1) {
 #courses {
     width: 40%;
     min-width: 400px;
-    /* border: 2px solid #758BFD;
-    border-radius: 4px; */
-    margin: 0 auto;
+    /* margin: 0 auto; */
     margin-top: 100px;
+    text-align: left;
 }
 
 .course {
@@ -247,20 +262,28 @@ h3.emptyCourse {
 }
 
 h3.courseName {
-    float:left;
+    float: left;
     width: 200px;
     font-weight: bold;
-    padding-left: 65px;
     font-size: 1.5em;
 }
-/* return */
-h3.courseAge {
-    float:right;
+
+h3.courseDepartment, h3.courseNumber, h3.courseCredit {
+    float: right;
     text-align: left;
-    width: 100px;
-    font-weight: bold;
+    width: 125px;
+    font-weight: normal;
     padding-right: 40px;
-    font-size: 1.5em;
+    font-size: 1em;
+}
+
+h3.courseDays, h3.courseTimes {
+    float: right;
+    text-align: left;
+    width: 125px;
+    font-weight: normal;
+    padding-right: 40px;
+    font-size: 1em;
 }
 
 .course:first-child {
@@ -270,266 +293,3 @@ h3.courseAge {
 .course:last-child {
     margin-bottom:10px;
 }
-
-/* html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-}
-
-#logo {
-    height: 40px;
-    width: 40;
-    padding-top: 5px;
-    float:left;
-    border-radius: 8px;
-}
-
-nav {
-    width: 100%;
-    height: 50px;
-    background-color: #758BFD;
-}
-
-nav:nth-child(1) {
-    padding-left: 25px;
-}
-
-.navlink {
-    padding: 5px;
-    padding-top: 12px;
-    padding-left: 20px;
-    color: white;
-    font-size: 1.3em;
-    float: left;
-}
-
-.navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
-    color: white;
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 4px;
-    background-color: #55acee;
-    transition: background-color 0.4s ease;
-}
-
-.navlink a:hover {
-    transition: background-color 0.8s ease;
-    background-color: #66bdff;
-}
-
-.domoForm {
-    border: 2px solid #338acc;
-    height: 35px;
-    width: 700px;
-    margin-top:0px;
-    padding-top:10px;
-    background-color: #55acee;
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
-}
-
-.domoForm label {
-    display: inline-block;
-    width: 75px;
-    margin-left: 10px;
-    font-size: 1.2em;
-    float: left;
-    color: white;
-}
-
-.domoForm input[type=text] {
-    float:left;
-}
-
-.makeDomoSubmit {
-    transition: background-color 0.4s ease;
-    display: inline;
-    width: 90px;
-    background-color: #55acee;
-    border-radius: 2px;
-    color: white;
-    text-decoration: none;
-}
-
-.makeDomoSubmit:link, .makeDomoSubmit:visited, .makeDomoSubmit:hover, .makeDomoSubmit:active {
-    color: white;
-}
-
-.makeDomoSubmit:hover {
-    transition: background-color 0.4s ease;
-    background-color: #338acc;
-}
-
-.mainForm {
-    height: 300px;
-    width: 350px;
-    margin: 0 auto;
-    padding-top: 350px;
-    font-size: 1.2em;
-}
-
-.mainForm h3 {
-    text-align: center;
-}
-
-.mainForm label {
-    display: inline-block;
-    width: 100px;
-    margin-right: 10px;
-    text-align: right;
-    font-size: 1.2em;
-}
-
-.formSubmit {
-    transition: background-color 0.4s ease;
-    display: block;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 14px;
-    font-size: 1.2em;
-    width: 100px;
-    background-color: #758BFD;
-    border-radius: 2px;
-    border-color: #AEB8FE;
-    padding: 3px 0px;
-    color: white;
-    text-decoration: none;
-}
-
-.formSubmit:link, .formSubmit:visited, .formSubmit:hover, .formSubmit:active {
-    color: white;
-}
-
-.formSubmit:hover {
-    transition: background-color 0.4s ease;
-    background-color: #338acc;
-}
-
-#user, #pass, #pass2 {
-    text-align: center;
-    font-size: 1.1em;
-    width: 180px;
-    border-radius: 6px;
-}
-
-#user:focus, #pass:focus, #pass2:focus {
-    outline: none;
-    box-shadow: 0px 0px 1px 1px #55acee;
-}
-
-#domoMessage {
-    display:none;
-    top: 250px;
-    width: 250px;
-    height: 650px;
-    position: absolute;
-    z-index: 200;
-    right: 0px;
-    overflow: hidden;
-}
-
-#domoMessage h3 {
-    width: 200px;
-    position: absolute;
-    top: 0px;
-    left: 20px;
-}
-
-#speech {
-    height: 120px;
-    width: 250px;
-    z-index:300;
-}
-
-#errorMessage {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: red;
-    font-style: italic;
-}
-
-#domo {
-    z-index: 225;
-    margin-top: -20px;
-    margin-left: 135px;
-    height: 450px;
-    width: 300px;
-    -ms-transform: rotate(330deg);
-    -webkit-transform: rotate(330deg); 
-    transform: rotate(330deg);
-}
-
-#domos {
-    width: 40%;
-    min-width: 400px;
-    border: 2px solid #55acee;
-    border-radius: 4px;
-    margin: 0 auto;
-    margin-top: 100px;
-}
-
-.domo {
-    width: 95%;
-    margin: 0 auto;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    border: 2px solid #55acee;
-    border-radius: 4px;
-    background-color: #55acee;
-    padding: 10px;
-    min-height:60px;
-    overflow: hidden;
-}
-
-.domo:hover {
-    transition: border-color 0.2s ease-out;
-    border-color: rgba(255,255,255, 0.8);
-    transition: background-color 2.6s ease-out;
-    background-color: #66bfff;
-}
-
-img.domoFace {
-    margin-left: 25px;
-    margin-right: 10px;
-    height: 50px;
-    width: 50px;
-    border-radius: 4px;
-    margin-top:10px;
-    float:left;
-}
-
-h3.emptyDomo {
-    width: 400px;
-    font-size: 1.5em;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 18px;
-}
-
-h3.domoName {
-    float:left;
-    width: 200px;
-    font-weight: bold;
-    padding-left: 65px;
-    font-size: 1.5em;
-}
-
-h3.domoAge {
-    float:right;
-    text-align: left;
-    width: 100px;
-    font-weight: bold;
-    padding-right: 40px;
-    font-size: 1.5em;
-}
-
-.domo:first-child {
-    margin-top: 10px;
-}
-
-.domo:last-child {
-    margin-bottom:10px;
-} */
